# UnrealLiveLinkCInterface

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
UnrealLiveLinkCInterface/: BuildUnrealLiveLinkCInterface.bat  BuildUnrealLiveLinkCInterface.xml  UnrealLiveLinkCInterface.Build.cs  UnrealLiveLinkCInterface.Target.cs  UnrealLiveLinkCInterface.cpp  UnrealLiveLinkCInterface.h
examples/: CMakeLIsts.txt  CirclingTransform.c
include/: UnrealLiveLinkCInterfaceAPI.h  UnrealLiveLinkCInterfaceTypes.h
pyUnrealLiveLink/: CMakeLIsts.txt  module.cpp
pyUnrealLiveLink/examples/: circling_transform.py  manny_run.json  manny_run.py  wave_properties.py
src/: CMakeLists.txt  UnrealLiveLinkCInterfaceAPI.c  UnrealLiveLinkCInterfaceAPI.cpp
